# naarad-sentinel

./: .gitignore  Cargo.toml  DEVELOPER-GUIDE.md  DEVELOPMENT.md  GUIDE.md  README.md  USER-GUIDE.md  build-all.sh  docker-build.sh  docker-test.sh  final-test.sh  install-pi.sh  install-service.sh  test-windows-fix.sh
.github/workflows/: ci.yml  release.yml
docs/: SCRIPTS-REFERENCE.md  contributing.md  overview.md
src/: config.rs  http_client.rs  main.rs  metrics.rs
src/collectors/: cpu_temp.rs  device_info.rs  disk_free.rs  mod.rs
