[package]
name = "naarad-sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
sysinfo = "0.30"
uname = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }
